Fix flickering in desktop animation

--- a/src/assets/scss/settings/_settings.scss
+++ b/src/assets/scss/settings/_settings.scss
@@ -41,6 +41,7 @@ $index-mobile-pairing:        700;
 
 $index-background-animation:  800;
 $index-footer:                1200;
+$index-drawing:               1100;
 $index-pairing:               700;
 
 $index-modal:                1000;
